--- a/css/sass/_core.scss
+++ b/css/sass/_core.scss
@@ -17,7 +17,7 @@
 }
 
 body {
-  background-color: darken($navy, 17%);
+  background-color: darken($navy, 14%);
   color: $fg;
 }
 
@@ -28,7 +28,6 @@ body, input, button {
 #Wrapper {
   margin: 0 auto 0 auto;
   padding: $spacing;
-  background-color: rgba(255, 255, 255, 0.05);
   max-width: $max-width;
 }
 
