--- a/css/sass/_responsive.scss
+++ b/css/sass/_responsive.scss
@@ -1,18 +1,11 @@
 @media only screen and (min-width: ($tile-size * 2) + ($spacing * 6)) {
 
-  body {
-    padding: $spacing;
-  }
-
-  #Wrapper {
-    border-radius: $radius;
-  }
-
   .tile-column {
     margin-bottom: 0;
   }
 
   #Wrapper aside {
+    position: fixed;
     float: left;
     width: $tile-size;
   }
